--- a/shop/templates/shop/shopHome.html
+++ b/shop/templates/shop/shopHome.html
@@ -290,7 +290,8 @@
 				{% if all_items %}
 				{% for item in all_items %}
 				<!-- card -->
-				<div class="col-12 col-sm-6 col-md-4 col-xl-3 col-xl-20">
+				<!-- <div class="col-12 col-sm-6 col-md-4 col-xl-3 col-xl-20"> -->
+				<div class="col-12 col-sm-6 col-md-3">
 					<div class="card card--catalog">
 						<a href="{{item.get_absolute_url}}" class="card__cover">
 							<img src="{{item.thumbnailImagePath.url}}" width="240px" height="340px" alt="">
