--- a/rentals/templates/rentals/rentalHome.html
+++ b/rentals/templates/rentals/rentalHome.html
@@ -51,11 +51,48 @@
 {% block content %}
 
 
+
+<section class="section">
+    <div style="padding-top: 5%;" class="container">
+        <div class="row">
+            <div class="col-12">
+                <div  class="post post--big">
+                    <a  href="#" class="banner__img">
+                        <img src="{% static 'img/banner_bg3.jpg' %}" alt="">
+                    </a>
+
+                    <div>
+
+                        <div  class="post__content">
+                        
+                            <h2  style="font-size: 24px;" class="post__title"><a href="https://vendor.gameon.com.ng/accounts/signup/" target="_blank">Rent out your idle games and earn an income</a></h2>
+                            
+                            <div  class="post__meta">
+
+                                    <span class="post__date">  <a style="width: 200px;" href="https://vendor.gameon.com.ng/accounts/signup/" target="_blank" class="card__buy">Become a Vendor </a></span>
+                      
+                               
+                            </div>
+                       
+                               
+                        </div>
+
+                    </div>
+
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 <!-- home -->
 <section class="section section--bg section--first" data-bg="{{the_featured_banner.bannerImagePath.url}}">
     <div class="container">
         <div class="row">
-            <!-- title -->
+          
             <div class="col-12">
                 <div class="section__title-wrap">
                     <h2 class="section__title section__title--title"><b>Best pick</b> for the month</h2>
@@ -71,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <!-- end title -->
+     
         </div>
     </div>
 
