--- a/rentals/templates/rentals/rentalHome.html
+++ b/rentals/templates/rentals/rentalHome.html
@@ -69,7 +69,7 @@
                     <h2 class="section__titledd">Rent out your idle games and earn an income</h2>
                 
                     <div style="margin-top: 5%;">
-                        <a style="width: 200px;" class="card__buy" href="#"> Become a Vendor </a>
+                        <a style="width: 200px;" class="card__buy" href="https://vendor.gameon.com.ng/accounts/signup" target="_blank"> Become a Vendor </a>
                     </div>
                    
 
