--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -105,6 +105,26 @@
 							
 							<button class="sign__btn" type="submit">Sign in</button>
 
+
+							<!-- <span class="sign__delimiter">or</span>
+
+							{% get_providers as socialaccount_providers %}
+							{% if socialaccount_providers %}
+							<div class="sign__social">
+
+								{% include "socialaccount/snippets/provider_list.html" with process="login" %}
+
+									{% include "socialaccount/snippets/login_extra.html" %}
+
+							</div> -->
+
+								
+							{% else %}
+							{% endif %}
+
+							
+								
+
 						
 
 							
