--- a/rentals/templates/rentals/rentalHome.html
+++ b/rentals/templates/rentals/rentalHome.html
@@ -87,7 +87,7 @@
 
 
 <!-- home -->
-<section class="section section--bg section--first" data-bg="{{the_featured_banner.bannerImagePath.url}}">
+<section class="section  section--bg" data-bg="{{the_featured_banner.bannerImagePath.url}}">
     <div class="container">
         <div class="row">
           
