--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -106,7 +106,7 @@
 							<button class="sign__btn" type="submit">Sign in</button>
 
 
-							<!-- <span class="sign__delimiter">or</span>
+							<span class="sign__delimiter">or</span>
 
 							{% get_providers as socialaccount_providers %}
 							{% if socialaccount_providers %}
@@ -116,7 +116,7 @@
 
 									{% include "socialaccount/snippets/login_extra.html" %}
 
-							</div> -->
+							</div>
 
 								
 							{% else %}
