--- a/users/templates/users/user_profile.html
+++ b/users/templates/users/user_profile.html
@@ -77,9 +77,9 @@
 							<li class="nav-item">
 								<a class="nav-link active" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="true">Settings</a>
 							</li>
-							<li class="nav-item">
+							<!-- <li class="nav-item">
 								<a class="nav-link" data-toggle="tab" href="#tab-4" role="tab" aria-controls="tab-4" aria-selected="false">KYC</a>
-							</li>
+							</li> -->
 							<li class="nav-item">
 
 								<a class="nav-link" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="false">My Purchases</a>
@@ -381,7 +381,7 @@
 					</div>
 				</div>
 
-
+<!-- 
 				<div class="tab-pane fade" id="tab-4" role="tabpanel">
 				
 					<form action="{% url 'users:update-identity' %}" method="POST" class="subscribe" id="add_kyc_documents_form" enctype="multipart/form-data">
@@ -488,7 +488,7 @@
 					</div>
 
 				</form>
-				</div>
+				</div> -->
 
 
 			</div>
