--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -106,7 +106,7 @@
 							<button class="sign__btn" type="submit">Sign in</button>
 
 
-							<span class="sign__delimiter">or</span>
+							<span class="sign__delimiter">sign in with socials</span>
 
 							{% get_providers as socialaccount_providers %}
 							{% if socialaccount_providers %}
