--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -106,15 +106,15 @@
 							<button class="sign__btn" type="submit">Sign in</button>
 
 
-							<span class="sign__delimiter">sign in with socials</span>
+							<span class="sign__delimiter">or</span>
 
 							{% get_providers as socialaccount_providers %}
 							{% if socialaccount_providers %}
 							<div class="sign__social">
 
-								{% include "socialaccount/snippets/provider_list.html" with process="login" %}
+								{% include "socialaccount/snippets/login_provider_list.html" with process="login" %}
 
-									{% include "socialaccount/snippets/login_extra.html" %}
+									<!-- {% include "socialaccount/snippets/login_extra.html" %} -->
 
 							</div>
 
